[package]
name = "solana-stake-interface"
version = "1.2.1"
description = "Instructions and constructors for the Stake program"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[package.metadata.solana]
program-id = "Stake11111111111111111111111111111111111111"

[dependencies]
borsh = { version = "1.5.1", features = [
    "derive",
    "unstable__schema",
], optional = true }
borsh0-10 = { package = "borsh", version = "0.10.3", optional = true }
num-traits = "0.2"
serde = { version = "1.0.210", optional = true }
serde_derive = { version = "1.0.210", optional = true }
solana-clock = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063" }
solana-cpi = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063", optional = true }
solana-frozen-abi = { version = "^2.1", features = [
    "frozen-abi",
], optional = true }
solana-frozen-abi-macro = { version = "^2.1", features = [
    "frozen-abi",
], optional = true }
solana-instruction = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063" }
solana-program-error = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063" }
solana-pubkey = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063" }
solana-system-interface = { git = "https://github.com/solana-program/system", rev = "f137956" }
solana-sysvar-id = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063" }
solana-decode-error = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063" }

[dev-dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
solana-account = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063" }
# solana-account = { version = "^2.1", features = ["bincode"] }
solana-borsh = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063" }
static_assertions = "1.1.0"
strum = "0.24"
strum_macros = "0.24"
test-case = "3.3.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
bincode = [
    "dep:solana-cpi",
    "solana-instruction/bincode",
    "solana-instruction/serde",
    "solana-system-interface/bincode",
    "serde",
]
borsh = [
    "dep:borsh",
    "dep:borsh0-10",
    "solana-instruction/borsh",
    "solana-program-error/borsh",
    "solana-pubkey/borsh",
]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-instruction/frozen-abi",
    "solana-pubkey/frozen-abi",
]
serde = ["dep:serde", "dep:serde_derive", "solana-pubkey/serde"]
