[package]
name = "solana-stake-client"
version = "0.0.0"
description = "A generated Rust library for the Stake program"
repository = "https://github.com/solana-program/stake"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
thiserror = "^1.0"
solana-program = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063" }
solana-instruction = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063" }

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "2.1"
solana-sdk = { git = "https://github.com/anza-xyz/solana-sdk", rev = "52d8063" }
